deployment/certificate-api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificate-api
spec:
  selector:
    matchLabels:
      app: certificate-api
  replicas: 1
  template:
    metadata:
      labels:
        app: certificate-api
    spec:
      containers:
        - name: certificate-api
          image: dockerhub/sunbird-rc-certificate-api
          ports:
            - protocol: TCP
              containerPort: 8078
          volumeMounts:
            - name: scripts-volume
              mountPath: /scripts
      volumes:
        - name: scripts-volume
          hostPath:
