deployment/certificate-signer-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certificate-signer
spec:
  selector:
    matchLabels:
      app: certificate-signer
  replicas: 1
  template:
    metadata:
      labels:
        app: certificate-signer
    spec:
      containers:
        - name: certificate-signer
          image: dockerhub/sunbird-rc-certificate-signer
          ports:
            - protocol: TCP
              containerPort: 8079
          volumeMounts:
            - name: imports-volume
              mountPath: /etc/signer/config.json
              subPath: config.json
      volumes:
        - name: imports-volume
          configMap:
           name: public-key-config
