deployment/registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: dockerhub/sunbird-rc-core
          ports:
            - protocol: TCP
              containerPort: 8081
          readinessProbe:
            httpGet:
              path: /_cluster/health
              port: 9200
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 4
          # volumeMounts:
          #   - name: schemas-volume
          #     mountPath: /home/sunbirdrc/config/public/_schemas
      volumes:
        - name: schemas-volume
          hostPath:
            path: ./schemas
