deployment/certificate-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: certificate-api
spec:
  selector:
    app: certificate-api
  ports:
    - protocol: TCP
      port: 8078
      targetPort: 8078
