deployment/certificate-signer-service.yml

apiVersion: v1
kind: Service
metadata:
  name: certificate-signer
spec:
  selector:
    app: certificate-signer
  ports:
    - protocol: TCP
      port: 8079
      targetPort: 8079
