deployment/file-storage-service.yml
apiVersion: v1
kind: Service
metadata:
  name: file-storage
spec:
  selector:
    app: file-storage
  ports:
    - name: port1
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: port2
      protocol: TCP
      port: 9001
      targetPort: 9001
