deployment/publickey-service.yml
apiVersion: v1
kind: Service
metadata:
  name: public-key-service
spec:
  selector:
    app: public-key-service
  ports:
    - protocol: TCP
      port: 3300
      targetPort: 3300
