deployment/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - host: unified-dev.digit.org
      http:
        paths:
          - path: /ui/(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
